sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

var i : int =0;
for (i <- 0 to getNombreValeurs()-2)
{var i : int =0;
setValeur(tab[i], i);
i=i+1;
}

}
